docs(tomcat): fold in the Azure Tribes A/B, and adopt dev's citation form
Two things the stateLock page was missing when it landed.

The Tribes residual now has its measurement. `implConfigureBlocking` does
not reproduce on the Windows box at all -- `TestDataIntegrity` fails 5/5
there for the multicast environment reason in BOTH arms -- so the A/B had
to run on the Azure host the report came from, dev's binary against this
branch's:

  dev (aa41feb17)   Tests run: 5,  Failures: 3   NPE lines 20   implConfigureBlocking 1
  this branch       Tests run: 5,  Failures: 2   NPE lines  0   implConfigureBlocking 0

Every NullPointerException in the class is gone and one of the three
failures with them. The two that remain are the multicast environment gap
that family's own page records, which this change does not touch and does
not claim.

The census citation moves to the bare-filename form `72bf631dd` started
enforcing today: the internal tree never ships, so `fixed-suite-bugs/foo.md`
in a published file is a dead link just as surely as the full path was.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>